# Akari

./: CMakeLists.txt  LICENSE  conanfile.txt
Src/: CMakeLists.txt
Src/Akari/: CMakeLists.txt
Src/Akari/Core/Lib/: CMakeLists.txt
Src/Akari/Core/Lib/Include/Akari/Core/: AkariCoreUtility.h
Src/Akari/Graphics/: CMakeLists.txt
Src/Akari/Graphics/Vulkan/: CMakeLists.txt
Src/Akari/Graphics/Vulkan/Core/Lib/: CMakeLists.txt
Src/Akari/Graphics/Vulkan/Core/Lib/Include/Akari/Graphics/Vulkan/Core/: AkariVKCore.h  AkariVKCoreDevice.h  AkariVKCoreDeviceUtils.h  AkariVKCoreExtension.h  AkariVKCoreExtensionUtils.h  AkariVKCoreInstance.h  AkariVKCoreSwapchain.h
Src/Akari/Graphics/Vulkan/Core/Lib/Src/: AkariVKCore.cpp  AkariVKCoreDeviceUtils.cpp  AkariVKCoreInstance.cpp
Src/Akari/Graphics/Vulkan/Core/Test/Test0/: CMakeLists.txt  main.cpp
Src/Akari/Graphics/Vulkan/Core/Test/Test1/: CMakeLists.txt  main.cpp
Src/Akari/Graphics/Vulkan/Utility/Lib/: CMakeLists.txt
Src/Akari/Graphics/Vulkan/Utility/Lib/Include/Akari/Graphics/Vulkan/Utility/: AkariVKUtils.h  AkariVKUtilsStructureWrapper.h
Src/Akari/Graphics/Vulkan/Utility/Lib/Src/: AkariVKUtilsStructureWrapper.cpp
Src/Akari/Graphics/Vulkan/Utility/Test/Test0/: CMakeLists.txt  main.cpp
Src/Engine/Lib/: CMakeLists.txt
Src/Engine/Lib/Include/Akari/Engine/: AkariEngine.h  AkariFormat.h  AkariUtility.h  AkariWindow.h
Src/Engine/Lib/Src/: AkariEngine.cpp  AkariWindow.cpp
Src/Engine/Test/Test0/: CMakeLists.txt  main.cpp
Src/Graphics/: CMakeLists.txt
Src/Graphics/Vulkan/Lib/: CMakeLists.txt
Src/Graphics/Vulkan/Lib/Include/Akari/Graphics/Vulkan/: AkariVulkanDevice.h  AkariVulkanInstance.h
Src/Graphics/Vulkan/Test/Test0/: CMakeLists.txt  main.cpp
Test/: CMakeLists.txt
Test/Test0/: CMakeLists.txt
Test/Test0/Include/: Test0App.h
Test/Test0/Src/: main.cpp
Test/TestLib/: CMakeLists.txt
Test/TestLib/Include/TestLib/: TestApp.h  TestGraphicsVulkan.h  TestUtility.h  TestWindow.h  TestWindowManager.h
Test/TestLib/Src/: TestApp.cpp  TestGraphicsVulkan.cpp  TestWindow.cpp  TestWindowManager.cpp
